# dockhand-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
dockhand_mcp/: server.py
